--- a/welcome.html
+++ b/welcome.html
@@ -5,7 +5,8 @@
         <title>Hello World</title>
     </head>
     <body>
-        <h1>Hello world!</h1>
+        <h1>Welcome to Veridian Dynamics!</h1>
+        At Veridian Dynamics, we solve <em>your</em> problems with <em><b>technology</b></em>
 
     </body>
 </html>
