download placeholder img instead of hotlink

--- a/github.html
+++ b/github.html
@@ -9,14 +9,14 @@
     </head>
     <body>
         <nav>
-            <img src="http://placeholder.pics/svg/30 " alt="github placeholder">
+            <img src="./img/30.svg " alt="github placeholder">
             <a href="">Pull requests</a>
             <a href="">Issues</a>
             <a href="">Marketplace</a>
             <a href="">Explore</a>
         </nav>
 
-        <h3><img src="http://placeholder.pics/svg/30 " alt="codeup placeholder">Codeup</h3>
+        <h3><img src="./img/30.svg " alt="codeup placeholder">Codeup</h3>
             <br>
         <a href="">Repositories 39</a>
         <a href="">People 15</a>
@@ -29,17 +29,17 @@
                 <th>Codeup's dev team</th>
             </tr>
             <tr>
-                <td><img src="http://placeholder.pics/svg/48  " alt="kent placeholder">Kent Beck <br>KentBeck</td>
+                <td><img src="./img/48.svg" alt="kent placeholder">Kent Beck <br>KentBeck</td>
                 <td>Member</td>
                 <td>1 team</td>
             </tr>
             <tr>
-                <td><img src="http://placeholder.pics/svg/48  " alt="CU inst placeholder">Codeup Instruction Staff <br>CodeupInstructors</td>
+                <td><img src="./img/48.svg" alt="CU inst placeholder">Codeup Instruction Staff <br>CodeupInstructors</td>
                 <td>Member</td>
                 <td>1 team</td>
             </tr>
             <tr>
-                <td><img src="http://placeholder.pics/svg/48  " alt="Martin placeholder">Martin Fowler <br>KentBeck</td>
+                <td><img src="./img/48.svg" alt="Martin placeholder">Martin Fowler <br>KentBeck</td>
                 <td>Member</td>
                 <td>teams</td>
             </tr>
