--- a/welcome.html
+++ b/welcome.html
@@ -8,10 +8,10 @@
             <header>
                 <a id="top"></a>
                 <h1>Welcome to Veridian Dynamics!</h1>
+                <p>
+                    At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <em><strong>technology.</strong></em>
+                </p>
             </header>
-            <p>
-                At Veridian Dynamics, we solve <em>your</em> problems with <em><strong>technology</strong></em>
-            </p>
             <hr>
             <h2>Core Values</h2>
                 <ul>
