add main and section tabs

--- a/welcome.html
+++ b/welcome.html
@@ -13,54 +13,72 @@
                 </p>
             </header>
             <hr>
-            <h2>Core Values</h2>
-                <ul>
-                    <li>Competence</li>
-                    <li>Involvement</li>
-                    <li>Technology</li>
-                </ul>
-            <h2>Our Process</h2>
-                <ol>
-                    <li>Plan</li>
-                    <li>Evaluate</li>
-                    <li>Implement</li>
-                </ol>
-            <h2>2020 Vision</h2>
-                <ul>
-                    <li>Become #1 in Technology</li>
-                    <li>Increase Success by 20%</li>
-                    <li>Increase Buisness by 30%</li>
-                </ul>
-            <hr>
-            <h2>Company Vision</h2>
-                <img width="400" src="./img/laptops.jpg" alt="image of laptops">
-                <img width="400" height="400" src="./img/sunset.jpg" alt="image of man and sunset">
-                <br>
-                <img width="400" src="./img/beach.jpg" alt="image of beach and trees">
-                <img width="400" src="./img/office.jpg" alt="image of office">
-            <h2>Our Product</h2>
-                <table>
-                    <tr>
-                        <th>Plan</th>
-                        <th>Price</th>
-                        <th>Features</th>
-                    </tr>
-                    <tr>
-                        <td>Starter</td>
-                        <td>$99</td>
-                        <td>Base Technology</td>
-                    </tr>
-                    <tr>
-                        <td>Advanced</td>
-                        <td>$199</td>
-                        <td>Additional Features</td>
-                    </tr>
-                    <tr>
-                        <td>Premium</td>
-                        <td>$499</td>
-                        <td>Unlimited Support</td>
-                    </tr>
-                </table>
+            <main>
+                <section>
+                    <header>
+                        <h2>Core Values</h2>
+                    </header>
+                    <ul>
+                        <li>Competence</li>
+                        <li>Involvement</li>
+                        <li>Technology</li>
+                    </ul>
+                    <header>
+                        <h2>Our Process</h2>
+                    </header>
+                    <ol>
+                        <li>Plan</li>
+                        <li>Evaluate</li>
+                        <li>Implement</li>
+                    </ol>
+                    <header>
+                        <h2>2020 Vision</h2>
+                    </header>
+                        <ul>
+                            <li>Become #1 in Technology</li>
+                            <li>Increase Success by 20%</li>
+                            <li>Increase Buisness by 30%</li>
+                        </ul>
+                    <hr>
+                </section>
+                <section>
+                    <header>
+                        <h2>Company Vision</h2>
+                    </header>
+                        <img width="400" src="./img/laptops.jpg" alt="image of laptops">
+                        <img width="400" height="400" src="./img/sunset.jpg" alt="image of man and sunset">
+                        <br>
+                        <img width="400" src="./img/beach.jpg" alt="image of beach and trees">
+                        <img width="400" src="./img/office.jpg" alt="image of office">
+                </section>
+                <section>
+                    <header>
+                        <h2>Our Product</h2>
+                    </header>
+                    <table>
+                        <tr>
+                            <th>Plan</th>
+                            <th>Price</th>
+                            <th>Features</th>
+                        </tr>
+                        <tr>
+                            <td>Starter</td>
+                            <td>$99</td>
+                            <td>Base Technology</td>
+                        </tr>
+                        <tr>
+                            <td>Advanced</td>
+                            <td>$199</td>
+                            <td>Additional Features</td>
+                        </tr>
+                        <tr>
+                            <td>Premium</td>
+                            <td>$499</td>
+                            <td>Unlimited Support</td>
+                        </tr>
+                    </table>
+                </section>
+            </main>
             <footer>
                 <p>
                     <em>All products come with our quality gaurentee &trade;</em>
