Fix spelling error

--- a/welcome.html
+++ b/welcome.html
@@ -81,7 +81,7 @@
             </main>
             <footer>
                 <p>
-                    <em>All products come with our quality gaurentee &trade;</em>
+                    <em>All products come with our quality guarantee &trade;</em>
                 </p>
                 <a href="#top">Go to top of the page.</a>
             </footer>
