--- a/github.html
+++ b/github.html
@@ -6,57 +6,70 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>GitHub</title>
+        <link rel="stylesheet" href="./css/gitstyle.css">
     </head>
+    <STYLE>A {text-decoration: none;} </STYLE>
     <body>
-        <nav>
+        <nav id="navbar">
             <img src="./img/30.svg " alt="github placeholder">
-            <a href="">Pull requests</a>
-            <a href="">Issues</a>
-            <a href="">Marketplace</a>
-            <a href="">Explore</a>
+            <a href=""> Pull Requests </a>
+            <a href=""> Issues </a>
+            <a href=""> Marketplace </a>
+            <a href=""> Explore </a>
         </nav>
+        <main>
+            <section class="tabs">
+                <header id="CuHead">
+                 <h3><img width="30" src="./img/chevron.png " alt="codeup placeholder">Codeup</h3>
+                </header>
+                <button href="">Repositories</button>
+                <button href="">People </button>
+                <button href="">Teams</button>
+                <button href="">Projects </button>
+                <button href="">Settings</button>
 
-        <h3><img src="./img/30.svg " alt="codeup placeholder">Codeup</h3>
-            <br>
-        <a href="">Repositories 39</a>
-        <a href="">People 15</a>
-        <a href="">Teams 7</a>
-        <a href="">Projects 0</a>
-        <a href="">Settings</a>
-            <br><br>
-        <table>
-            <tr>
-                <th>Codeup's dev team</th>
-            </tr>
-            <tr>
-                <td><img src="./img/48.svg" alt="kent placeholder">Kent Beck <br>KentBeck</td>
-                <td>Member</td>
-                <td>1 team</td>
-            </tr>
-            <tr>
-                <td><img src="./img/48.svg" alt="CU inst placeholder">Codeup Instruction Staff <br>CodeupInstructors</td>
-                <td>Member</td>
-                <td>1 team</td>
-            </tr>
-            <tr>
-                <td><img src="./img/48.svg" alt="Martin placeholder">Martin Fowler <br>KentBeck</td>
-                <td>Member</td>
-                <td>teams</td>
-            </tr>
-        </table>
-        <p>
-            ©2018 GitHub, Inc
-            <a href="">Terms</a>
-            <a href="">Privacy</a>
-            <a href="">Security</a>
-            <a href="">Status</a>
-            <a href="">Help</a>
-            <a href="">Contact GitHub</a>
-            <a href="">API</a>
-            <a href="">Training</a>
-            <a href="">Shop</a>
-            <a href="">Blog</a>
-            <a href="">About</a>
-        </p>
+            </section>
+            <section>
+                <br><br>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Codeup's dev team</th>
+                        </tr>
+                    </thead>
+                     <tr>
+                         <td><img src="./img/48.svg" alt="kent placeholder">Kent Beck <br>KentBeck</td>
+                         <td>Member</td>
+                         <td>1 team</td>
+                     </tr>
+                     <tr>
+                         <td><img src="./img/48.svg" alt="CU inst placeholder">Codeup Instruction Staff <br>CodeupInstructors</td>
+                         <td>Member</td>
+                         <td>1 team</td>
+                     </tr>
+                     <tr>
+                         <td><img src="./img/48.svg" alt="Martin placeholder">Martin Fowler <br>KentBeck</td>
+                         <td>Member</td>
+                         <td>teams</td>
+                     </tr>
+                </table>
+                 <p>
+                     ©2018 GitHub, Inc
+                     <a href="">Terms</a>
+                     <a href="">Privacy</a>
+                     <a href="">Security</a>
+                     <a href="">Status</a>
+                     <a href="">Help</a>
+                     <a href="">Contact GitHub</a>
+                     <a href="">API</a>
+                     <a href="">Training</a>
+                     <a href="">Shop</a>
+                     <a href="">Blog</a>
+                     <a href="">About</a>
+                 </p>
+            </section>
+        </main>
     </body>
+
+
 </html>
