add style to github.html

--- a/github.html
+++ b/github.html
@@ -20,7 +20,7 @@
         <main>
             <section class="tabs">
                 <header id="CuHead">
-                 <h3><img width="30" src="./img/chevron.png " alt="codeup placeholder">Codeup</h3>
+                 <h3><img width="40" src="./img/chevron.png " alt="codeup placeholder">Codeup</h3>
                 </header>
                 <button href="">Repositories</button>
                 <button href="">People </button>
@@ -37,35 +37,38 @@
                             <th>Codeup's dev team</th>
                         </tr>
                     </thead>
-                     <tr>
-                         <td><img src="./img/48.svg" alt="kent placeholder">Kent Beck <br>KentBeck</td>
-                         <td>Member</td>
-                         <td>1 team</td>
-                     </tr>
-                     <tr>
-                         <td><img src="./img/48.svg" alt="CU inst placeholder">Codeup Instruction Staff <br>CodeupInstructors</td>
-                         <td>Member</td>
-                         <td>1 team</td>
-                     </tr>
-                     <tr>
-                         <td><img src="./img/48.svg" alt="Martin placeholder">Martin Fowler <br>KentBeck</td>
-                         <td>Member</td>
-                         <td>teams</td>
-                     </tr>
+                    <tr>
+                        <td><img src="./img/48.svg" alt="kent placeholder"></td>
+                        <td class="table"><a href="#kent">Kent Beck</a> <br>KentBeck</td>
+                        <td>Member</td>
+                        <td>1 team</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./img/48.svg" alt="CU inst placeholder"></td>
+                        <td class="table"><a href="#codeup">Codeup Instruction Staff</a> <br>CodeupInstructors </td>
+                        <td>Member</td>
+                        <td>1 team</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./img/48.svg" alt="Martin placeholder"></td>
+                        <td class="table"><a href="#martin">Martin Fowler</a> <br>KentBeck </td>
+                        <td>Member</td>
+                        <td>teams</td>
+                    </tr>
                 </table>
                  <p>
                      ©2018 GitHub, Inc
-                     <a href="">Terms</a>
-                     <a href="">Privacy</a>
-                     <a href="">Security</a>
-                     <a href="">Status</a>
-                     <a href="">Help</a>
-                     <a href="">Contact GitHub</a>
-                     <a href="">API</a>
-                     <a href="">Training</a>
-                     <a href="">Shop</a>
-                     <a href="">Blog</a>
-                     <a href="">About</a>
+                     <a href="#standIn">Terms</a>
+                     <a href="#standIn">Privacy</a>
+                     <a href="#standIn">Security</a>
+                     <a href="#standIn">Status</a>
+                     <a class="link-space" href="standIn">Help</a>
+                     <a href="#standIn">Contact GitHub</a>
+                     <a href="#standIn">API</a>
+                     <a href="#standIn">Training</a>
+                     <a href="#standIn">Shop</a>
+                     <a href="#standIn">Blog</a>
+                     <a href="#standIn">About</a>
                  </p>
             </section>
         </main>
