add register with us link to welcome.html

--- a/welcome.html
+++ b/welcome.html
@@ -83,6 +83,7 @@
                 <p>
                     <em>All products come with our quality guarantee &trade;</em>
                 </p>
+                <a href="http://localhost:63342/codeup-web-exercises/forms.html?_ijt=s98f4d88gpfopq4enubh1a729f">Register with us.</a><br>
                 <a href="#top">Go to top of the page.</a>
             </footer>
 
