modified thankyou page for forms.html

--- a/forms.html
+++ b/forms.html
@@ -12,15 +12,15 @@
         <form action="https://www.elformo.com/forms/f4ec10ac-c323-4245-9ecd-7cc6fb277e2f" method="post" accept-charset="UTF-8">
             <section>
                 <h3>Register Here</h3>
-                <label for="email">Email</label>
+                <label for="email">Email</label> <br>
                 <input id="email" name="Email" type="text" placeholder="Email">
                 <br>
-                <label for="password">Password</label>
+                <label for="password">Password</label><br>
                 <input id="password" name="password" type="password" placeholder="Password">
-                <br>
+                <br><br>
             </section>
             <section>
-                <h4>Bio</h4>
+                <label for="bio">Bio</label><br>
                 <textarea rows="5" cols="40" id="bio" name="bio" placeholder="Tell us about yourself..."></textarea>
                 <br>
             </section>
@@ -28,14 +28,14 @@
                 <h4>How did you hear about us?</h4>
 
                  <input id="ad1" type="radio" name="advertisement" value="billboard"><label for="ad1">Billboard</label><br>
-                 <input id="ad2" type="radio" name="advertisement" value="radio advertisement"><label for="ad2">Radio Advertisement</label><br>
-                 <input id="ad3" type="radio" name="advertisement" value="internet advertisement"><label
+                 <input id="ad2" type="radio" name="advertisement" value="radio"><label for="ad2">Radio Advertisement</label><br>
+                 <input id="ad3" type="radio" name="advertisement" value="internet"><label
                     for="ad3">Internet Advertisement</label><br>
                  <input id="ad4" type="radio" name="advertisement" value="other"><label for="ad4">Other</label><br>
                 <br>
             </section>
             <section>
-                <label for="browser">What Browser are you using?</label>
+                <label for="browser">What Browser are you using?</label><br>
                 <select id="browser" name="browser_preference">
                     <option value="chrome">Chrome</option>
                     <option value="safari">Safari</option>
@@ -43,8 +43,8 @@
                     <option value="ie">Internet Explorer</option>
                     <option value="opera">Opera</option>
                 </select>
+                <br><br>
             </section>
-
 
             <input type="submit">
         </form>
