--- a/forms.html
+++ b/forms.html
@@ -8,32 +8,38 @@
         <title>Register With Us</title>
     </head>
     <body>
-
+                <!-- Email and Password -->
         <form action="https://www.elformo.com/forms/f4ec10ac-c323-4245-9ecd-7cc6fb277e2f" method="post" accept-charset="UTF-8">
             <section>
                 <h3>Register Here</h3>
-                <label for="email">Email</label> <br>
+                <label for="email">Email:</label> <br>
                 <input id="email" name="Email" type="text" placeholder="Email">
                 <br>
-                <label for="password">Password</label><br>
+                <label for="password">Password:</label><br>
                 <input id="password" name="password" type="password" placeholder="Password">
                 <br><br>
             </section>
+                <!-- End Email and Password -->
+                <!-- Bio Textarea -->
             <section>
-                <label for="bio">Bio</label><br>
+                <label for="bio">Bio:</label><br>
                 <textarea rows="5" cols="40" id="bio" name="bio" placeholder="Tell us about yourself..."></textarea>
                 <br>
             </section>
+                <!-- End Textarea -->
+                <!-- Advertisement Questionaire -->
             <section>
                 <h4>How did you hear about us?</h4>
 
-                 <input id="ad1" type="radio" name="advertisement" value="billboard"><label for="ad1">Billboard</label><br>
-                 <input id="ad2" type="radio" name="advertisement" value="radio"><label for="ad2">Radio Advertisement</label><br>
-                 <input id="ad3" type="radio" name="advertisement" value="internet"><label
-                    for="ad3">Internet Advertisement</label><br>
-                 <input id="ad4" type="radio" name="advertisement" value="other"><label for="ad4">Other</label><br>
+                 <input id="ad1" type="checkbox" name="advertisement" value="billboard"><label for="ad1">Billboard</label><br>
+                 <input id="ad2" type="checkbox" name="advertisement" value="radio"><label for="ad2">Radio Advertisement</label><br>
+                 <input id="ad3" type="checkbox" name="advertisement" value="internet"><label
+                     for="ad3">Internet Advertisement</label><br>
+                 <input id="ad4" type="checkbox" name="advertisement" value="other"><label for="ad4">Other</label><br>
                 <br>
             </section>
+                <!-- End Advertisement Questionaire -->
+                <!-- Browser Dropdown -->
             <section>
                 <label for="browser">What Browser are you using?</label><br>
                 <select id="browser" name="browser_preference">
@@ -45,7 +51,7 @@
                 </select>
                 <br><br>
             </section>
-
+                <!-- End Browser Dropdown -->
             <input type="submit">
         </form>
 
