Correct stylesheet link

--- a/welcome.html
+++ b/welcome.html
@@ -3,7 +3,7 @@
         <head>
            <meta charset='8'>
             <title>Veridian Dynamics</title>
-            <link rel="stylesheet" href="css/style.csgis">
+            <link rel="stylesheet" href="css/style.css">
         </head>
         <body>
             <header>
