--- a/welcome.html
+++ b/welcome.html
@@ -9,7 +9,7 @@
             <header>
                 <a id="top"></a>
                 <h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
-                <p>
+                <p class="center">
                     At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <em><strong>technology.</strong></em>
                 </p>
             </header>
@@ -87,6 +87,5 @@
                 <a href="http://localhost:63342/codeup-web-exercises/forms.html?_ijt=s98f4d88gpfopq4enubh1a729f">Register with us.</a><br>
                 <a href="#top">Go to top of the page.</a>
             </footer>
-
          </body>
     </html>
