update styling for welcome.html/ changed 2 imgs

--- a/welcome.html
+++ b/welcome.html
@@ -19,44 +19,85 @@
                     <header>
                         <h2>Core Values</h2>
                     </header>
-                    <ul>
-                        <li>Competence</li>
-                        <li>Involvement</li>
-                        <li>Technology</li>
-                    </ul>
+
+                    <table class="centered">
+                        <ul>
+                            <tr>
+                                <td><li>Competence</li></td>
+                            </tr>
+                            <tr>
+                                <td><li>Involvement</li></td>
+                            </tr>
+                            <tr>
+                                <td><li>Technology</li></td>
+                            </tr>
+                        </ul>
+                    </table>
+
                     <header>
                         <h2>Our Process</h2>
                     </header>
-                    <ol>
-                        <li>Plan</li>
-                        <li>Evaluate</li>
-                        <li>Implement</li>
-                    </ol>
+
+                    <table class="centered">
+                        <ol>
+                            <tr>
+                                <td><li>Plan</li></td>
+                            </tr>
+                            <tr>
+                                <td><li>Evaluate</li></td>
+                            </tr>
+                            <tr>
+                                <td><li>Implement</li></td>
+                            </tr>
+                        </ol>
+                    </table>
+
                     <header>
                         <h2>2020 Vision</h2>
                     </header>
-                        <ul>
-                            <li>Become #1 in Technology</li>
-                            <li>Increase Success by 20%</li>
-                            <li>Increase Buisness by 30%</li>
-                        </ul>
+
+                    <table class="centered">
+                            <tr>
+                                <td><li>Become #1 in Technology</li></td>
+                            </tr>
+                            <tr>
+                                <td><li>Increase Success by 20%</li></td>
+                            </tr>
+                            <tr>
+                                <td><li>Increase Buisness by 30%</li></td>
+                            </tr>
+                    </table>
+
                     <hr>
                 </section>
                 <section>
                     <header>
                         <h2>Company Vision</h2>
                     </header>
-                        <img width="400" src="./img/laptops.jpg" alt="image of laptops">
-                        <img width="400" height="400" src="./img/sunset.jpg" alt="image of man and sunset">
-                        <br>
-                        <img width="400" src="./img/beach.jpg" alt="image of beach and trees">
-                        <img width="400" src="./img/office.jpg" alt="image of office">
+                        <table class="centered">
+                            <tr>
+                                <td>
+                                    <img width="400" height="290" src="img/blueprints.jpg" alt="image of laptops">
+                                </td>
+                                <td>
+                                    <img width="400" height="290" src="./img/construction.jpg" alt="image of sunset on construction site">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <img width="400" src="./img/beach.jpg" alt="image of beach and trees">
+                                </td>
+                                <td>
+                                    <img width="400" src="./img/office.jpg" alt="image of office">
+                                </td>
+                            </tr>
+                        </table>
                 </section>
                 <section>
                     <header>
                         <h2>Our Product</h2>
                     </header>
-                    <table>
+                    <table class="centered" id="paychart">
                         <tr>
                             <th>Plan</th>
                             <th>Price</th>
