modify style in welcome.html

--- a/welcome.html
+++ b/welcome.html
@@ -57,23 +57,24 @@
                     </header>
 
                     <table class="centered">
-                            <tr>
-                                <td><li>Become #1 in Technology</li></td>
-                            </tr>
-                            <tr>
-                                <td><li>Increase Success by 20%</li></td>
-                            </tr>
-                            <tr>
-                                <td><li>Increase Buisness by 30%</li></td>
-                            </tr>
+                        <tr>
+                            <td><li>Become #1 in Technology</li></td>
+                        </tr>
+                        <tr>
+                            <td><li>Increase Success by 20%</li></td>
+                        </tr>
+                        <tr>
+                            <td><li>Increase Buisness by 30%</li></td>
+                        </tr>
                     </table>
 
                     <hr>
                 </section>
                 <section>
                     <header>
-                        <h2>Company Vision</h2>
+                        <h2>Company Vision</h2> <br>
                     </header>
+
                         <table class="centered">
                             <tr>
                                 <td>
