add bonus-practice folder

--- a/bonus-practice/lease-application.html
+++ b/bonus-practice/lease-application.html
@@ -33,7 +33,7 @@
             <p class="rightside">
                 Recieved on: <input type="date"> at <input type="time">
             </p>
-            <img width="50px" src="img/texas.png" alt="texas association of realtors logo">
+            <img width="50px" src="bonus-img/texas.png" alt="texas association of realtors logo">
             <h3>Texas Association of Realtors</h3>
             <h2>RESIDENTIAL LEASE APPLICATION</h2>
             <h6>USE OF THIS FORM BY PERSONS WHO ARE NOT MEMBERS OF THE TEXAS ASSOCIATION OF THE REALTORS IS NOT AUTHORIZED</h6>
