--- a/bonus-practice/pickles.html
+++ b/bonus-practice/pickles.html
@@ -5,12 +5,12 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="css/pickle.css">
+        <link rel="stylesheet" href="bonus-css/pickle.css">
         <title>Mr. Pickle's Puppy Pickers</title>
     </head>
     <body>
         <nav class="navbar">
-            <img class="puppy" width="180px"  src="img/puppy.jpg" alt="puppy dog"><br><br>
+            <img class="puppy" width="180px" src="bonus-img/puppy.jpg" alt="puppy dog"><br><br>
             <header>
                 <h3>Welcome, Mr. Pickles!</h3>
             </header>
