--- a/bonus-practice/texas-flag.html
+++ b/bonus-practice/texas-flag.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Texas State Flag</title>
+    <link rel="stylesheet" href="bonus-css/texas-flag.css">
 </head>
 <body>
-$END$
+    <main class="container">
+        <div class="blue-box">
+            <!--bluebox-->
+        </div>
+        <div class="white-box">
+            <!--white box-->
+        </div>
+        <div class="red-box">
+            <!--red box-->
+        </div>
+        <div class="star-five">
+            <!--star-->
+        </div>
+    </main>
 </body>
 </html>
