centered logo on flex nav (exercise)

--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -18,14 +18,14 @@
             <li><a class="" href="#">Market</a></li>
             <li><a class="" href="#">Jobs</a></li>
 
-            <li class="logo"> Logo</></li>
+            <li class="logo"> Logo</li>
 
-            <li><a class="" href="#">Follow Us</a></li>
+            <li class="linkright"><a href="#">Follow Us</a></li>
             <li><a href="#"><i class="fas fa-search "></i></a></li>
             <li><a href="#"><i class="fas fa-shopping-cart "></i></a></li>
             <li><a href="#"><i class="fas fa-user-circle "></i></a></li
-
         </ul>
+
     </nav>
     <body>
 
