finish streaming-player-ui (exercise)

--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -16,7 +16,7 @@
             <li><a class="" link href="#">Articles</a></li>
             <li><a class="" href="#">Products</a></li>
             <li><a class="" href="#">Market</a></li>
-            <li><a class="" href="#">Jobs</a></li>
+            <li class=""><a class="" href="#">Jobs</a></li>
 
             <li class="logo"> Logo</li>
 
