--- a/forms.html
+++ b/forms.html
@@ -9,7 +9,7 @@
     </head>
     <body>
                 <!-- Email and Password -->
-        <form action="https://www.elformo.com/forms/f4ec10ac-c323-4245-9ecd-7cc6fb277e2f" method="post" accept-charset="UTF-8">
+        <form action="https://request-inspector.glitch.me/" method="post" accept-charset="UTF-8">
             <section>
                 <h3>Register Here</h3>
                 <label for="email">Email:</label> <br>
