--- a/order-pizza.html
+++ b/order-pizza.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
     <title>Pizza World -Order Online-</title>
 
 </head>
@@ -34,13 +35,13 @@
                             <input type="text" class="form-control" placeholder="Zip Code" aria-label="Zipcode" >
                         </div>
                         <div>
-                            <input class="form-control mr-sm-2" type="search" placeholder="Search stores near you!" aria-label="Search">
+                            <button type="button" >Search stores near you!</button>
                         </div>
                     </form>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0 sign-up">
-                <a href="#"><i class="fas fa-user-circle "></i> Sign Up</a>
+            <form class="form-inline my-2 my-lg-0 sign-up ">
+                <a href="#" class="nav-item"><i class="fas fa-user-circle  "></i> Sign Up</a>
             </form>
         </div>
     </nav>
@@ -76,7 +77,7 @@
                 Choose Size and Crust
             </div>
             <div class="card-body">
-                <  action="">
+
                     <h6 class="card-title">Hand Tossed</h6>
 
                     <div class="card-border">
@@ -137,7 +138,7 @@
 
                     <div class="card-border">
                         <p class="card-text"> How Much?</p>
-                        <select name="cheese" class="form-control">
+                        <select name="cheese" class="form-control form-sizing">
                             <option value="light">Light</option>
                             <option selected value="Regular">Regular</option>
                             <option value="Extra">Extra</option>
@@ -151,7 +152,7 @@
                     <div class="card-border no-radius">
 
                         <p class="card-text"> What Type?</p>
-                        <select name="sauce-type"  class="form-control">
+                        <select name="sauce-type"  class="form-control form-sizing">
                             <option selected value="tomato">Robust Inspired Tomato Sauce</option>
                             <option value="Marinara">Marinara Sauce</option>
                             <option value="bbq">BBQ Sauce</option>
@@ -160,7 +161,7 @@
                     </div>
                     <div class="card-border">
                         <p class="card-text"> How Much?</p>
-                        <select name="sauce-amount"  class="form-control">
+                        <select name="sauce-amount"  class="form-control form-sizing">
                             <option selected value="regular">Regular</option>
                             <option value="light">Light</option>
                             <option value="extra">Extra</option>
@@ -169,8 +170,12 @@
                     </div>
                 <br>
 
-                <div class="card-footer">
-                    <a href="#toppings" class="btn btn-primary btn-right" >Next Step</a>
+                <div class="card-footer flex-right">
+                    <div class="btn-group" role="group" aria-label="Basic example ">
+                        <button type="button"  class="btn btn-secondary" ><a href="#size" class="btn-text1">Previous Step</a></button>
+                        <button type="button" class="btn btn-secondary" ><a href="#toppings" class="btn-text1">Next Step</a></button>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -226,7 +231,7 @@
 
 
                 <div class="card-footer">
-                    <input type="submit" class="btn btn-primary btn-right">
+                    <button type="submit" class="btn btn-primary btn-right">Checkout <i class="fas fa-shopping-cart"></i> </button>
                 </div>
             </div>
         </div>
