--- a/order-pizza.html
+++ b/order-pizza.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
     <link rel="stylesheet" href="css/custom.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
     <title>Pizza World -Order Online-</title>
 
 </head>
@@ -53,190 +52,159 @@
             </div>
         </div>
         <form action="https://request-inspector.glitch.me/" method="post" accept-charset="UTF-8">
-        <!--crust type tabs-->
-
-        <div>
-            <h2>Build your own pizza!</h2>
-            <ul class="nav nav-tabs" id="size">
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#size"> <span class="badge-pill badge-dark">1</span> Size and Crust</a>
+                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#size" role="tab" aria-controls="size" aria-selected="true">Size and Crust</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#cheese"><span class="badge-pill badge-dark">2</span> Cheese and Sauce</a>
+                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Cheese and Sauce</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#toppings"><span class="badge-pill badge-dark">3</span> Toppings</a>
+                    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Toppings</a>
                 </li>
             </ul>
-        </div>
-        
-        <!--crust type and size-->
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="size" role="tabpanel" aria-labelledby="home-tab">
+                    <div class="card" >
+                        <div class="card-header">
+                            Choose Size and Crust
+                        </div>
+                        <div class="card-body">
 
-        <div class="card" >
-            <div class="card-header">
-                Choose Size and Crust
-            </div>
-            <div class="card-body">
+                            <h6 class="card-title">Hand Tossed</h6>
 
-                    <h6 class="card-title">Hand Tossed</h6>
+                            <div class="card-border">
+                                <p class="card-text"> Garlic seasoned with a rich, buttery taste.</p>
+                                <ul class="list-group list-group-flush pizza-size" >
+                                    <li class="list-group-item"><input type="radio" id="size1" name="size" value="small-hand" ><label for="size1"> Small (10")</label></li>
+                                    <li class="list-group-item"><input type="radio" id="size2" name="size" value="medium-hand"><label for="size2"> Medium (12")</label></li>
+                                </ul>
+                            </div>
 
-                    <div class="card-border">
-                        <p class="card-text"> Garlic seasoned with a rich, buttery taste.</p>
-                        <ul class="list-group list-group-flush pizza-size" >
-                            <li class="list-group-item"><input type="radio" id="size1" name="size" value="small-hand" ><label for="size1"> Small (10")</label></li>
-                            <li class="list-group-item"><input type="radio" id="size2" name="size" value="medium-hand"><label for="size2"> Medium (12")</label></li>
-                        </ul>
-                    </div>
+                            <br>
+                            <h6 class="card-title">Crispy Thin</h6>
 
-                <br>
-                    <h6 class="card-title">Crispy Thin</h6>
+                            <div class="card-border">
+                                <p class="card-text"> Thin enough for optimum crispy to crunch ratio.</p>
+                                <ul class="list-group list-group-flush pizza-size" >
+                                    <li class="list-group-item"><input type="radio" id="size3" name="size" value="medium-thin" ><label for="size3"> Medium (12")</label></li>
+                                    <li class="list-group-item"><input type="radio" id="size4" name="size" value="large-thin"><label for="size4"> large (14")</label></li>
+                                </ul>
+                            </div>
 
-                    <div class="card-border">
-                        <p class="card-text"> Thin enough for optimum crispy to crunch ratio.</p>
-                        <ul class="list-group list-group-flush pizza-size" >
-                            <li class="list-group-item"><input type="radio" id="size3" name="size" value="medium-thin" ><label for="size3"> Medium (12")</label></li>
-                            <li class="list-group-item"><input type="radio" id="size4" name="size" value="large-thin"><label for="size4"> large (14")</label></li>
-                        </ul>
-                    </div>
+                            <br>
 
-                <br>
-
-                <div class="card-footer">
-                    <a href="#cheese" class="btn btn-primary btn-right" >Next Step</a>
-                </div>
-            </div>
-        </div>
-        <br><br><br>
-
-        <!--cheese and sauce tabs-->
-
-        <div>
-            <h2>Build your own pizza!</h2>
-            <ul class="nav nav-tabs" id="cheese">
-                <li class="nav-item">
-                    <a class="nav-link " href="#size"> <span class="badge-pill badge-dark">1</span> Size and Crust</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#cheese"><span class="badge-pill badge-dark">2</span> Cheese and Sauce</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#toppings"><span class="badge-pill badge-dark">3</span> Toppings</a>
-                </li>
-            </ul>
-        </div>
-
-
-        <!--cheese and sauce-->
-
-        <div class="card" >
-            <div class="card-header">
-                Choose Cheese and Sauce
-            </div>
-            <div class="card-body">
-
-                    <h6 class="card-title">Cheese</h6>
-
-                    <div class="card-border">
-                        <p class="card-text"> How Much?</p>
-                        <select name="cheese" class="form-control form-sizing">
-                            <option value="light">Light</option>
-                            <option selected value="Regular">Regular</option>
-                            <option value="Extra">Extra</option>
-                            <option value="Double">Double</option>
-                        </select>
-                        <br>
-                    </div>
-
-                    <h6 class="card-title">Sauce</h6>
-
-                    <div class="card-border no-radius">
-
-                        <p class="card-text"> What Type?</p>
-                        <select name="sauce-type"  class="form-control form-sizing">
-                            <option selected value="tomato">Robust Inspired Tomato Sauce</option>
-                            <option value="Marinara">Marinara Sauce</option>
-                            <option value="bbq">BBQ Sauce</option>
-                            <option value="alfredo">Alfredo Sauce</option>
-                        </select>
-                    </div>
-                    <div class="card-border">
-                        <p class="card-text"> How Much?</p>
-                        <select name="sauce-amount"  class="form-control form-sizing">
-                            <option selected value="regular">Regular</option>
-                            <option value="light">Light</option>
-                            <option value="extra">Extra</option>
-
-                        </select>
-                    </div>
-                <br>
-
-                <div class="card-footer flex-right">
-                    <div class="btn-group" role="group" aria-label="Basic example ">
-                        <button type="button"  class="btn btn-secondary" ><a href="#size" class="btn-text1">Previous Step</a></button>
-                        <button type="button" class="btn btn-secondary" ><a href="#toppings" class="btn-text1">Next Step</a></button>
+                            <div class="card-footer">
+                                <a href="#cheese" class="btn btn-primary btn-right" >Next Step</a>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
-            </div>
-        </div>
-        <br><br><br>
 
-        <!--toppings tabs-->
+                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                    <div class="card" >
+                        <div class="card-header">
+                            Choose Cheese and Sauce
+                        </div>
+                        <div class="card-body">
 
-        <div>
-            <h2>Build your own pizza!</h2>
-            <ul class="nav nav-tabs" id="toppings">
-                <li class="nav-item">
-                    <a class="nav-link " href="#size"> <span class="badge-pill badge-dark">1</span> Size and Crust</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#cheese"><span class="badge-pill badge-dark">2</span> Cheese and Sauce</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#toppings"><span class="badge-pill badge-dark">3</span> Toppings</a>
-                </li>
-            </ul>
-        </div>
+                            <h6 class="card-title">Cheese</h6>
 
-        <!--toppings-->
+                            <div class="card-border">
+                                <p class="card-text"> How Much?</p>
+                                <select name="cheese" class="form-control form-sizing">
+                                    <option value="light">Light</option>
+                                    <option selected value="Regular">Regular</option>
+                                    <option value="Extra">Extra</option>
+                                    <option value="Double">Double</option>
+                                </select>
+                                <br>
+                            </div>
 
-        <div class="card" >
-            <div class="card-header">
-                Choose Toppings
-            </div>
-            <div class="card-body">
+                            <h6 class="card-title">Sauce</h6>
 
-                    <h6 class="card-title">Choose Meats</h6>
+                            <div class="card-border no-radius">
 
-                    <div class="card-border ">
-                        <ul class="list-group list-group-flush pizza-size" >
-                            <li class="list-group-item"><input type="checkbox" id="pepperoni" name="topping" value="pepperoni" ><label for="pepperoni"> Pepperoni</label></li>
-                            <li class="list-group-item"><input type="checkbox" id="beef" name="topping" value="beef" ><label for="beef"> Beef</label></li>
-                            <li class="list-group-item"><input type="checkbox" id="Ham" name="topping" value="Ham" ><label for="Ham"> Ham</label></li>
-                            <li class="list-group-item"><input type="checkbox" id="Philly" name="topping" value="Philly" ><label for="Philly"> Philly Steak</label></li>
-                        </ul>
+                                <p class="card-text"> What Type?</p>
+                                <select name="sauce-type"  class="form-control form-sizing">
+                                    <option selected value="tomato">Robust Inspired Tomato Sauce</option>
+                                    <option value="Marinara">Marinara Sauce</option>
+                                    <option value="bbq">BBQ Sauce</option>
+                                    <option value="alfredo">Alfredo Sauce</option>
+                                </select>
+                            </div>
+                            <div class="card-border">
+                                <p class="card-text"> How Much?</p>
+                                <select name="sauce-amount"  class="form-control form-sizing">
+                                    <option selected value="regular">Regular</option>
+                                    <option value="light">Light</option>
+                                    <option value="extra">Extra</option>
+
+                                </select>
+                            </div>
+                            <br>
+
+                            <div class="card-footer flex-right">
+                                <div class="btn-group" role="group" aria-label="Basic example ">
+                                    <button type="button"  class="btn btn-secondary" ><a href="#size" class="btn-text1">Previous Step</a></button>
+                                    <button type="button" class="btn btn-secondary" ><a href="#toppings" class="btn-text1">Next Step</a></button>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
+                </div>
+                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                    <div class="card" >
+                        <div class="card-header">
+                            Choose Toppings
+                        </div>
+                        <div class="card-body">
 
-                    <br>
-                    <h6 class="card-title">Choose Non-Meats</h6>
+                            <h6 class="card-title">Choose Meats</h6>
 
-                    <div class="card-border">
-                        <ul class="list-group list-group-flush pizza-size" >
-                            <li class="list-group-item"><input type="checkbox" id="peppers" name="topping" value="peppers" ><label for="peppers"> Green Peppers</label></li>
-                            <li class="list-group-item"><input type="checkbox" id="mushrooms" name="topping" value="mushrooms" ><label for="mushrooms"> Mushrooms</label></li>
-                            <li class="list-group-item"><input type="checkbox" id="Onions" name="topping" value="Onions" ><label for="Onions"> Onions</label></li>
-                            <li class="list-group-item"><input type="checkbox" id="Jalepeno" name="topping" value="Jalepeno" ><label for="Jalepeno"> Jalepeno</label></li>
-                        </ul>
+                            <div class="card-border ">
+                                <ul class="list-group list-group-flush pizza-size" >
+                                    <li class="list-group-item"><input type="checkbox" id="pepperoni" name="topping" value="pepperoni" ><label for="pepperoni"> Pepperoni</label></li>
+                                    <li class="list-group-item"><input type="checkbox" id="beef" name="topping" value="beef" ><label for="beef"> Beef</label></li>
+                                    <li class="list-group-item"><input type="checkbox" id="Ham" name="topping" value="Ham" ><label for="Ham"> Ham</label></li>
+                                    <li class="list-group-item"><input type="checkbox" id="Philly" name="topping" value="Philly" ><label for="Philly"> Philly Steak</label></li>
+                                </ul>
+                            </div>
+
+                            <br>
+                            <h6 class="card-title">Choose Non-Meats</h6>
+
+                            <div class="card-border">
+                                <ul class="list-group list-group-flush pizza-size" >
+                                    <li class="list-group-item"><input type="checkbox" id="peppers" name="topping" value="peppers" ><label for="peppers"> Green Peppers</label></li>
+                                    <li class="list-group-item"><input type="checkbox" id="mushrooms" name="topping" value="mushrooms" ><label for="mushrooms"> Mushrooms</label></li>
+                                    <li class="list-group-item"><input type="checkbox" id="Onions" name="topping" value="Onions" ><label for="Onions"> Onions</label></li>
+                                    <li class="list-group-item"><input type="checkbox" id="Jalepeno" name="topping" value="Jalepeno" ><label for="Jalepeno"> Jalepeno</label></li>
+                                </ul>
+                            </div>
+
+
+                            <div class="card-footer">
+                                <button type="submit" class="btn btn-primary btn-right">Checkout <i class="fas fa-shopping-cart"></i> </button>
+                            </div>
+                        </div>
                     </div>
-
-
-                <div class="card-footer">
-                    <button type="submit" class="btn btn-primary btn-right">Checkout <i class="fas fa-shopping-cart"></i> </button>
                 </div>
             </div>
-        </div>
+
+
 
 
         </form>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
+</html>
+    </body>
+
 </html>
