add pill badge to tabs

--- a/order-pizza.html
+++ b/order-pizza.html
@@ -53,7 +53,7 @@
 
         <!--BANNER-->
 
-        <header class="container body-width">
+        <header class="container body-width d-none d-lg-block">
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
                     <h1 class="display-4">Welcome to Pizza World</h1>
@@ -69,13 +69,19 @@
 
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="size-tab" data-toggle="tab" href="#size" role="tab" aria-controls="size" aria-selected="true">Size and Crust</a>
+                        <a class="nav-link active" id="size-tab" data-toggle="tab" href="#size" role="tab" aria-controls="size" aria-selected="true">
+                            <span class="badge badge-pill badge-secondary">1</span>
+                            Size and Crust</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="cheese-tab" data-toggle="tab" href="#cheese" role="tab" aria-controls="cheese" aria-selected="false">Cheese and Sauce</a>
+                        <a class="nav-link" id="cheese-tab" data-toggle="tab" href="#cheese" role="tab" aria-controls="cheese" aria-selected="false">
+                            <span class="badge badge-pill badge-secondary">2</span>
+                            Cheese and Sauce</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="toppings-tab" data-toggle="tab" href="#toppings" role="tab" aria-controls="toppings" aria-selected="false">Toppings</a>
+                        <a class="nav-link" id="toppings-tab" data-toggle="tab" href="#toppings" role="tab" aria-controls="toppings" aria-selected="false">
+                            <span class="badge badge-pill badge-secondary">3</span>
+                            Toppings</a>
                     </li>
                 </ul>
 
