--- a/order-pizza.html
+++ b/order-pizza.html
@@ -123,7 +123,7 @@
                                 <br>
 
                                 <div class="card-footer flex-right">
-                                    <a href="#cheese" class="btn btn-primary" >Next Step</a>
+                                    <a href="#cheese" class="btn btn-primary" >Next Step  <i class="fas fa-chevron-right"> </i></a>
                                 </div>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
 
                                 <div class="card-border no-radius">
 
-                                    <p class="card-text"> What Type?</p>
+                                    <p class="card-text "> What Type?</p>
                                     <select name="sauce-type"  class="form-control form-sizing">
                                         <option selected value="tomato">Robust Inspired Tomato Sauce</option>
                                         <option value="Marinara">Marinara Sauce</option>
@@ -182,8 +182,8 @@
 
                                 <div class="card-footer flex-right">
                                     <div class="btn-group" role="group" aria-label="Basic example ">
-                                        <button type="button"  class="btn btn-secondary" ><a href="#size" class="btn-text1">Previous Step</a></button>
-                                        <button type="button" class="btn btn-secondary" ><a href="#toppings" class="btn-text1">Next Step</a></button>
+                                        <button type="button"  class="btn btn-secondary" ><a href="#size" class="btn-text1"><i class="fas fa-chevron-left"> </i>Previous Step</a></button>
+                                        <button type="button" class="btn btn-secondary" ><a href="#toppings" class="btn-text1">Next Step <i class="fas fa-chevron-right"> </i></a></button>
                                     </div>
 
                                 </div>
