tweeks to exercise

--- a/mini-function-exercises.html
+++ b/mini-function-exercises.html
@@ -21,11 +21,11 @@
 
    //Exercise 2
 
-    function isFive(number) {
-        return number === "5";
+    function isFive(input) {
+        return input === "5"|| input === 5;
     }
     var userGeneratedNumber = prompt('enter a number');
-    console.log('is ' + userGeneratedNumber + ' equal to 5?')
+    console.log('is ' + userGeneratedNumber + ' equal to 5?');
     console.log(isFive(userGeneratedNumber));
 
 
