finish dom (exercise)

--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -50,7 +50,7 @@
 
             if( listItems[i].getAttribute("data-dbid") == 1){
                 listItems[i].style.color = "blue";
-            }else if (i % 2 === 0) {
+            }else if (i % 2 !== 0) {
                 listItems[i].style.color = "grey";
             }
 
@@ -60,7 +60,7 @@
         var subParagraphs = document.getElementsByClassName('sub-paragraph');
 
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-        subParagraphs[0].innerHTML= 'Mission Accomplished!';
+        subParagraphs[0].innerText = 'Mission Accomplished!';
     })();
 </script>
 </body>
