--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -39,7 +39,7 @@
         var subHeader = document.getElementById('sub-header');
 
         // TODO: Set the text color of subHeader to blue
-        subHeader.style.color= 'blue';
+        subHeader.style.color = 'blue';
 
         // TODO: Uncomment the next line and get all list items
         var listItems = document.getElementsByTagName('li') ;
@@ -48,7 +48,7 @@
         // TODO: Set text color of li with dbid = 1 to blue
         for (var i = 0; i < listItems.length; i++){
 
-            if( listItems[i].getAttribute("data-dbid") == 1){
+            if( listItems[i].getAttribute("data-dbid") === '1'){
                 listItems[i].style.color = "blue";
             }else if (i % 2 !== 0) {
                 listItems[i].style.color = "grey";
