--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -25,7 +25,10 @@
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
 
-
+<button id="header-btn">Change Header</button>
+<button id="sub-btn">Change Sub-Header</button>
+<button id="list-btn">Change List</button>
+<button id="paragraph-btn">Change Paragraph</button>
 <script>
     (function() {
         "use strict";
@@ -33,34 +36,62 @@
         var mainHeader = document.getElementById('main-header');
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-        mainHeader.innerHTML = "JavaScript is Cool";
+
+       var changeHeader = function(e){
+           mainHeader.innerHTML = "JavaScript is Cool";
+       };
+        document.getElementById('header-btn').addEventListener('click', changeHeader, false);
+
+        ///////////////////////////////////////////////////////////
+
 
         // TODO: Uncomment the next line and get the sub header element by id
         var subHeader = document.getElementById('sub-header');
 
         // TODO: Set the text color of subHeader to blue
-        subHeader.style.color = 'blue';
+
+        var changeSubHeader = function(e){
+            subHeader.style.color = 'blue';
+        };
+
+        document.getElementById('sub-btn').addEventListener("click", changeSubHeader,false);
+
+        //////////////////////////////////////////////////////////
+
 
         // TODO: Uncomment the next line and get all list items
         var listItems = document.getElementsByTagName('li') ;
 
         // TODO: Set text color on every other list item to grey
         // TODO: Set text color of li with dbid = 1 to blue
-        for (var i = 0; i < listItems.length; i++){
 
-            if( listItems[i].getAttribute("data-dbid") === '1'){
-                listItems[i].style.color = "blue";
-            }else if (i % 2 !== 0) {
-                listItems[i].style.color = "grey";
+        var changeList = function (e) {
+            for (var i = 0; i < listItems.length; i++){
+
+                if( listItems[i].getAttribute("data-dbid") === '1'){
+                    listItems[i].style.color = "blue";
+                }else if (i % 2 !== 0) {
+                    listItems[i].style.color = "grey";
+                }
             }
+        };
 
-        }
+        document.getElementById('list-btn').addEventListener('click', changeList, false);
+
+        ///////////////////////////////////////////////////////////
+
 
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
         var subParagraphs = document.getElementsByClassName('sub-paragraph');
 
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-        subParagraphs[0].innerText = 'Mission Accomplished!';
+
+        var changeParagraph = function(e){
+            subParagraphs[0].innerText = 'Mission Accomplished!';
+        };
+
+        document.getElementById('paragraph-btn').addEventListener('click', changeParagraph, false);
+
     })();
 </script>
 </body>
